--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,16 @@ width: 50%; " height="100%" width="49%">
         function component() {
             return {
                 diffs: [],
-                showRendered: function (path) {
+                showDiffs: false,
+                displayDiffs: function (diff) {
+                    this.showDiffs = !this.showDiffs;
+                    if (!this.showDiffs) {
+                        return;
+                    }
+                    console.log("Diff", diff);
+                    this.$refs.diffs.innerHTML = diff.Diffs;
+                },
+                displayRendered: function (path) {
                     var frame1 = document.getElementById('dir1');
                     var frame2 = document.getElementById('dir2');
                     frame1.src = `/dir1/${path}`
@@ -59,6 +68,10 @@ width: 50%; " height="100%" width="49%">
 
     <div class="container mx-auto pt-10 overflow-y-scroll border-t border-gray-200" style="height: 50%;"
         x-data="component()" x-init="init()">
+        <div class="absolute top-0 h-full w-full bg-gray-100 p-10" x-show="showDiffs" x-ref="diffs"
+            @click="showDiffs = false">
+
+        </div>
         <h1 class="text-2xl font-bold ml-2" x-text="'Diffs (' + diffs.length + ')' "></h1>
         <div class="flex flex-wrap">
             <template x-for="(diff, index) in diffs" :key="diff.Path">
@@ -72,10 +85,21 @@ width: 50%; " height="100%" width="49%">
                             <label class="font-bold">Reason:</label>
                             <span x-text="diff.Reason"></span>
                         </div>
-                        <button @click="showRendered(diff.Path)"
+                        <div class="text-xs mb-3">
+                            <label class="font-bold">Tags1:</label>
+                            <span x-text="diff.Tags1"></span>
+                        </div>
+                        <div class="text-xs mb-3">
+                            <label class="font-bold">Tags2:</label>
+                            <span x-text="diff.Tags2"></span>
+                        </div>
+                        <button @click="displayRendered(diff.Path)"
                             class="w-25 h-10 mr-2 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded text-xs">Rendered</button>
-                        <button @click="showRendered(diff.Path + '.hl')"
+                        <button @click="displayRendered(diff.Path + '.hl')"
                             class="w-25 h-10 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded text-xs">Source</button>
+                        <button @click="displayDiffs(diff)"
+                            class="w-25 h-10 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded text-xs">Diff</button>
+
                     </div>
                 </div>
             </template>
